--- a/AgendaFornecedores/AgendaFornecedores/Views/Shared/_Layout.cshtml
+++ b/AgendaFornecedores/AgendaFornecedores/Views/Shared/_Layout.cshtml
@@ -62,6 +62,8 @@
             ativo: @user.NomeUsuario
             &copy; 2023 - AgendaFornecedores
 
+            <button class="btn btn-outline-secundary btn-light" type="submit"><a asp-controller="Home" asp-action="Sair">sair</a></button>
+
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
