--- a/AgendaFornecedores/AgendaFornecedores/Views/Fornecedor/Formulario.cshtml
+++ b/AgendaFornecedores/AgendaFornecedores/Views/Fornecedor/Formulario.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Formulario";
 }
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <section class="row">
 
@@ -24,7 +25,7 @@
 
                 <div class="form-group">
                     <label for="Nome">Nome:</label>
-                    <input type="text" class="form-control" value="@fornecedor.Nome" name="nomeFornecedor">
+                    <input type="text" class="form-control" value="@fornecedor.Nome" name="nome">
                 </div>
 
                 <div class="form-group">
@@ -44,7 +45,7 @@
 
                 <div class="form-group">
                     <label for="vencimentoFatura">Dia de vencimento de fatura:</label>
-                    <input type="date" class="form-control" maxlength="2" value="@fornecedor.VencimentoFatura" name="vencimentoFatura">
+                    <input type="date" class="form-control" maxlength="10" value="@fornecedor.VencimentoFatura.ToString("yyyy-MM-dd")" name="vencimentoFatura">
                 </div>
 
                 <div class="form-group">
@@ -66,7 +67,7 @@
 
                 <div class="form-group">
                     <label for="Nome">Nome:</label>
-                    <input type="text" class="form-control" id="nome" required placeholder="Digite o nome do fornecedor" name="nomeFornecedor">
+                    <input type="text" class="form-control" id="nome" required placeholder="Digite o nome do fornecedor" name="nome">
                 </div>
 
                 <div class="form-group">
@@ -107,7 +108,12 @@
     </div>
 
 </section>
-
+<script>
+    $(document).ready(function () {
+        $('#CNPJ').mask('00.000.000/0000-00', { reverse: true });
+        $('#contato').mask('(00)00000-0000', { reverse: true });
+    });
+</script>
 
 <script type="text/javascript" src="~/site.js"></script>
 
