--- a/AgendaFornecedores/AgendaFornecedores/Views/Fornecedor/Formulario.cshtml
+++ b/AgendaFornecedores/AgendaFornecedores/Views/Fornecedor/Formulario.cshtml
@@ -35,7 +35,7 @@
 
                 <div class="form-group">
                     <label for="Contato">Contato:</label>
-                    <input type="text" class="form-control" maxlength="9" value="@fornecedor.Contato" name="contato">
+                    <input type="text" class="form-control" maxlength="11" value="@fornecedor.Contato" name="contato">
                 </div>
 
                 <div class="form-group">
@@ -55,39 +55,40 @@
                 </div>
 
 
-                <button onclick="reuturn ConfirmacaoCadastro()" style="margin-top:1%;" class="btn btn-primary" type="submit">Adicionar</button>
+                <button style="margin-top:1%;" class="btn btn-primary" type="submit">Adicionar</button>
 
             </form>
         }
         else
         {
+           
             <h1 class="text-center display-4">Cadastro de Fornecedores de TI </h1>
 
             <form onsubmit="return ConfirmacaoCadastro() " asp-controller="Fornecedor" asp-action="Cadastrar" method="post" name="formularioAdicionar">
 
                 <div class="form-group">
                     <label for="Nome">Nome:</label>
-                    <input type="text" class="form-control" id="nome" required placeholder="Digite o nome do fornecedor" name="nome">
+                    <input type="text" class="form-control" id="nome" required min="1" placeholder="Digite o nome do fornecedor" name="nome">
                 </div>
 
                 <div class="form-group">
                     <label for="CNPJ">CNPJ:</label>
-                    <input type="text" class="form-control" id="CNPJ" required maxlength="14" placeholder="Digite o CNPJ do fornecedor" name="cnpj">
+                    <input type="text" class="form-control" id="CNPJ" required min="14" maxlength="14" placeholder="Digite o CNPJ do fornecedor" id="cnpjInput"  name="cnpj">
                 </div>
 
                 <div class="form-group">
                     <label for="Contato">Contato:</label>
-                    <input type="text" class="form-control" id="contato" required maxlength="9" placeholder="Digite o Contato do fornecedor" name="contato">
+                    <input type="text" class="form-control" id="contato" required min="1" maxlength="11" placeholder="Digite o Contato do fornecedor" name="contato">
                 </div>
 
                 <div class="form-group">
                     <label for="email">e-mail:</label>
-                    <input type="email" class="form-control" id="email" required placeholder="Digite o e-mail do fornecedor" name="email">
+                    <input type="email" class="form-control" id="email" min="1" required placeholder="Digite o e-mail do fornecedor" name="email">
                 </div>
 
                 <div class="form-group">
                     <label for="vencimentoFatura">Dia de vencimento de fatura:</label>
-                    <input type="date" class="form-control" id="email" required maxlength="2" placeholder="Digite o dia de vencimento" name="vencimentoFatura">
+                    <input type="date" class="form-control" id="vencimentofat" required placeholder="Digite o dia de vencimento" name="vencimentoFatura">
                 </div>
 
                 <div class="form-group">
@@ -95,7 +96,6 @@
                     <br />
                     <textarea class="form-control" name="anotacao" id="anotacoes" cols="25" rows="5"></textarea>
                 </div>
-
 
                 <button onclick="reuturn ConfirmacaoCadastro()" style="margin-top:1%;" class="btn btn-primary" type="submit">Adicionar</button>
 
@@ -108,13 +108,4 @@
     </div>
 
 </section>
-<script>
-    $(document).ready(function () {
-        $('#CNPJ').mask('00.000.000/0000-00', { reverse: true });
-        $('#contato').mask('(00)00000-0000', { reverse: true });
-    });
-</script>
-
-<script type="text/javascript" src="~/site.js"></script>
-
 
