Funcionalidade  de envio de notas e criação de diretorios finalizada

--- a/AgendaFornecedores/AgendaFornecedores/Views/Fornecedor/Formulario.cshtml
+++ b/AgendaFornecedores/AgendaFornecedores/Views/Fornecedor/Formulario.cshtml
@@ -78,7 +78,7 @@
 
                 <div class="form-group">
                     <label for="Contato">Contato:</label>
-                    <input type="text" class="form-control" id="contato" required min="1" maxlength="11" placeholder="Digite o Contato do fornecedor" name="contato">
+                    <input type="text" class="form-control" id="contato" required min="11" maxlength="20" placeholder="00000000000" name="contato">
                 </div>
 
                 <div class="form-group">
