Readaptando função para verificar se as notas de determinados fornecedores ja foram enviadas ou nao

--- a/AgendaFornecedores/AgendaFornecedores/Views/Home/Index.cshtml
+++ b/AgendaFornecedores/AgendaFornecedores/Views/Home/Index.cshtml
@@ -111,7 +111,17 @@ else
 
             <button type="submit">Analisar faturas </button>
         </form>
+
+    <form asp-controller="Fornecedor" asp-action="CriaPastas">
+
+            <input value="@JsonConvert.SerializeObject(forners)" name="forns" hidden>
+
+            <button type="submit">Criar pasta para fornecedores </button>
+
+        </form>
+
     <p>@TempData["AnaliseVencFatura"]</p>
+    <p>@TempData["VerificaCriaDiretorio"]</p>
 
 
 }
