Função de atualizar o nome do diretorio e, implementação de filtragem da lista de açoes de acordo no metodo de verificar ação de envio

--- a/AgendaFornecedores/AgendaFornecedores/Views/Fornecedor/Formulario.cshtml
+++ b/AgendaFornecedores/AgendaFornecedores/Views/Fornecedor/Formulario.cshtml
@@ -55,7 +55,7 @@
                 </div>
 
 
-                <button style="margin-top:1%;" class="btn btn-primary" type="submit">Adicionar</button>
+                <button style="margin-top:1%;" class="btn btn-primary" type="submit">Alterar</button>
 
             </form>
         }
